Added mongoDB + refactoring
